namespaces/apps/dashboard/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashboard
spec:
  parentRefs:
    - name: public-gateway
      namespace: traefik

  hostnames:
    - dash.toando.de

  rules:
    - backendRefs:
        - name: dashboard
          port: 3000
